HOP-3246 fixed cookie banner size on mobile

--- a/antora-ui-hop/src/css/cookies-eu-banner.default.css
+++ b/antora-ui-hop/src/css/cookies-eu-banner.default.css
@@ -91,6 +91,7 @@
 
 @media screen and (max-width: 1023px) {
   #cookies-eu-content {
-    font-size: 6vw;
+    font-size: 2vw;
+    padding: 1rem 2rem;
   }
 }
